# CURI-Walker

./: .gitignore  .gitmodules  README.md  backwards_lowvel_lowheight.mat  backwards_mk_new_com_080_step_03.mat  forward.mat  mat_pyth.py  outie2.mat
matlab_lipm/: animateInverseKinematics.mlx  animateLIPM.mlx  animateLIPMLocal.mlx  animateLIPM_backwards_withStop.mlx  animateLIPM_backwards_withoutStop.mlx  animateLIPM_backwards_withoutStop_original.mlx  applicationLIPM.mlapp  getSwingFootTraj_bsplines.m
ubt_sim_ws/src/example/: CMakeLists.txt  package.xml
ubt_sim_ws/src/example/cfg/: Convert.cfg
ubt_sim_ws/src/example/config/: walker.urdf
ubt_sim_ws/src/example/launch/: converter.launch  grasp_cup.launch  moveit_webots.launch  pub_cloud.launch  task_1.launch  verify.launch
ubt_sim_ws/src/example/meshes/: base_link.STL  left_leg_l1.STL  left_leg_l2.STL  left_leg_l3.STL  left_leg_l4.STL  left_leg_l5.STL  left_leg_l6.STL  left_limb_l1.STL  left_limb_l4.STL  left_limb_l5.STL  right_leg_l2.STL  right_leg_l5.STL  right_leg_link2.STL  right_limb_l1.STL  right_limb_l3.STL  right_limb_l5.STL  right_palm_link.STL
ubt_sim_ws/src/example/scripts/: converter.py  verify.py  walker_moveit_interface.py
ubt_sim_ws/src/example/src/: example_node.cpp
ubt_sim_ws/src/ivo_pkg/: CMakeLists.txt  package.xml
ubt_sim_ws/src/ivo_pkg/launch/: rtabmap.launch
ubt_sim_ws/src/ivo_pkg/scripts/: script.py
ubt_sim_ws/src/launch/: rtabmap.launch
ubt_sim_ws/src/scripts/: camera_info.py
ubt_sim_ws/src/walker_brain/: CMakeLists.txt  README.md  package.xml
ubt_sim_ws/src/walker_brain/action/: DummyAction.action
ubt_sim_ws/src/walker_brain/config/: nav.rviz  task.rviz
ubt_sim_ws/src/walker_brain/include/walker_brain/: bt_action_node.h  bt_generic_types.h  bt_service_node.h  rosout_logger.h
ubt_sim_ws/src/walker_brain/launch/: carry_box.launch  dummy_test.launch  grasp_cup.launch  open_fridge.launch  prepare.launch  prepare_carry_box.launch  prepare_grasp_cup.launch  prepare_open_fridge.launch  prepare_push_cart.launch  prepare_switch_light.launch  prepare_upstairs.launch  push_cart.launch  switch_light.launch  upstairs.launch
ubt_sim_ws/src/walker_brain/launch/includes/: navigation.launch.xml  process_pointcloud.launch.xml
ubt_sim_ws/src/walker_brain/scripts/: grasp_cup_helper.py  open_fridge_helper.py  open_fridge_server.py  push_cart_server.py  upstairs_helper.py  walk_helper.py
ubt_sim_ws/src/walker_brain/src/: bt_port_node.cpp  dummy_test_node.cpp  grasp_cup_node.cpp  open_fridge_node.cpp  switch_light_node.cpp
ubt_sim_ws/src/walker_brain/src/lib/: rosout_logger.cpp
ubt_sim_ws/src/walker_brain/srv/: Dummy.srv  EstimateContactForce.srv  EstimateTargetPose.srv  MoveLeg.srv  MoveToPose2D.srv
ubt_sim_ws/src/walker_brain/test/: dummy_server.cpp
ubt_sim_ws/src/walker_brain/tree/: carry_box_14.xml  dummy_test.xml  grasp_cup_11.xml  grasp_cup_2.xml  grasp_cup_2_bk.xml  grasp_cup_2_left.xml  grasp_cup_2_right.xml  grasp_cup_3.xml  grasp_cup_3_f.xml  grasp_cup_3_left.xml  grasp_cup_3_right.xml  grasp_cup_4_left.xml  grasp_cup_4_right.xml  grasp_cup_5.xml  grasp_cup_5_none.xml  nav.pl.xml  open_fridge_10.xml  open_fridge_11.xml  open_fridge_11_bk.xml  open_fridge_12.xml  open_fridge_13.xml  push_cart_6.xml  push_cart_7.xml  push_cart_8.xml  push_cart_9.xml  switch_light_1.xml  upstairs_15.xml  upstairs_15_36s.xml  upstairs_15_41s.xml  upstairs_15_49s.xml  upstairs_15_bk.xml  walker_pl.xml
ubt_sim_ws/src/walker_description/: CMakeLists.txt  package.xml
ubt_sim_ws/src/walker_description/meshes/: left_leg_link2.STL  left_limb_l2.STL  left_limb_l3.STL  left_limb_l7.STL  left_palm_link.STL  left_thumb_l1.STL  right_leg_l1.STL  right_leg_l3.STL  right_leg_l4.STL  right_leg_l6.STL  right_limb_l2.STL  right_limb_l4.STL  right_limb_l7.STL  walker_left_hand_index1.dae  walker_left_hand_index2.dae  walker_left_hand_palm.dae  walker_left_hand_thumb1.dae  walker_left_hand_thumb2.dae  walker_left_lower_arm_1.dae  walker_left_lower_arm_2.dae  walker_left_shoulder_pitch.dae  walker_left_shoulder_roll.dae  walker_left_upper_arm.dae
ubt_sim_ws/src/walker_description/urdf/: walker.urdf  walker_webots.urdf
ubt_sim_ws/src/walker_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ubt_sim_ws/src/walker_moveit_config/config/: example.srdf  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  sensors_3d.yaml  walker.srdf
ubt_sim_ws/src/walker_movement/: CMakeLists.txt  README.md  package.xml
ubt_sim_ws/src/walker_nav/: CMakeLists.txt  Readme.md  package.xml  user_account.json
ubt_sim_ws/src/walker_walk/: CMakeLists.txt  package.xml
ubt_sim_ws/src/walker_webots_hardware_interface/: CMakeLists.txt  package.xml  ros_controllers.yaml
walker_install/lib/: Windows╧┬╢┴╚ббв╔ш╓├X86╡╟┬╝├▄┬ы╡─╖╜╖и.txt  Windows下读取、设置X86登录密码的方法.txt
walker_install/share/cruiser_msgs/: package.xml
walker_install/share/cruiser_protocol_lib/: package.xml
walker_model/worlds/: .WAIC.wbproj
(+354 files in other folders)
